src/pypa/parser/parser2.cc
// Copyright 2014 Vinzenz Feenstra
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
#include  <pypa/parser/apply.hh>
#include <pypa/parser/parser_fwd.hh>
#include <cassert>

extern "C" double strtod(const char *s00, char **se);

namespace pypa {

void syntax_error(State & s, char const * message) {}

inline int64_t base_char_to_value(char c) {
    if(c >= '0' && c <= '9') {
        return int64_t(c - '0');
    }
    if(c >= 'A' && c <= 'F') {
        return int64_t(c - 'A') + 10;
    }
    return int64_t(c - 'a') + 10;
}

bool number_from_base(int64_t base, State & s, AstNumberPtr & ast) {
    String const & value = top(s).value;
    AstNumber & result = *ast;
    result.num_type = AstNumber::Integer;
    result.integer = 0;
    for(auto c : value) {
        result.integer *= base;
        int64_t tmp = base_char_to_value(c);
        result.integer += tmp;
    }
    return true;
}

bool number(State & s, AstNumberPtr & ast) {
    StateGuard guard(s, ast);
    location(s, create(ast));
    int base = 0;
    if(is(s, Token::NumberFloat)) {
        String const & dstr = top(s).value;
        char * e = 0;
        double result = strtod(dstr.c_str(), &e);
        if(!e || *e) {
            return false;
        }
        ast->num_type = AstNumber::Float;
        ast->floating = result;
        pop(s);
        return guard.commit();
    }
    else if(is(s, Token::NumberBinary)) {
        base = 2;
    }
    else if(is(s, Token::NumberOct)) {
        base = 8;
    }
    else if(is(s, Token::NumberInteger)) {
        base = 10;
    }
    else if(is(s, Token::NumberHex)) {
        base = 16;
    }
    if(base && number_from_base(base, s, ast)) {
        pop(s);
        return guard.commit();
    }
    return false;
}

template< typename Fun >
bool generic_binop_expr(State & s, AstExpr & ast, TokenKind op, AstBinOpType op_type, Fun fun) {
    StateGuard guard(s, ast);
    if(fun(s, ast)) {
        if(expect(s, op)) {
            AstBinOpPtr bin;
            location(s, create(bin));
            bin->left = ast;
            bin->op = op_type;
            ast = bin;
            if(!fun(s, bin->right)) {
                return false;
            }
        }
        return guard.commit();
    }
    return false;
}

template< typename Fun >
bool generic_boolop_expr(State & s, AstExpr & ast, Token op, AstBoolOpType op_type, Fun fun) {
    StateGuard guard(s, ast);
    if(fun(s, ast)) {
        if(is(s, op)) {
            AstBoolOpPtr p;
            location(s, create(p));
            p->values.push_back(ast);
            p->op = op_type;
            ast = p;
            while(expect(s, op)) {
                AstExpr tmp;
                if(!fun(s, tmp)) {
                    return false;
                }
                p->values.push_back(tmp);
            }
        }
        return guard.commit();
    }
    return false;
}

bool dotted_as_names(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstExpressionsPtr lst;
    location(s, create(lst));
    ast = lst;
    AstExpr dotted;
    while(dotted_as_name(s, dotted)) {
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    return !lst->items.empty() && guard.commit();
}

bool import_as_name(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstAliasPtr ptr;
    location(s, create(ptr));
    ast = ptr;
    if(consume_value(s, Token::Identifier, ptr->name))
    {
        if(expect(s, Token::KeywordAs)) {
            if(!consume_value(s, Token::Identifier, ptr->as_name) || ptr->as_name.empty()) {
                return false;
            }
        }
        return guard.commit();
    }
    return false;
}

bool try_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstTryExceptPtr try_except;
    location(s, create(try_except));
    ast = try_except;
    // TODO:
    // (expect(s, Token::KeywordTry) expect(s, TokenKind::Colon)
    // suite
    // ((except_clause expect(s, TokenKind::Colon) suite)+
    // [expect(s, Token::KeywordElse) expect(s, TokenKind::Colon) suite]
    // [expect(s, Token::KeywordFinally) expect(s, TokenKind::Colon) suite]
    // ||expect(s, Token::KeywordFinally) expect(s, TokenKind::Colon) suite))
    return false ; //guard.commit();
}

bool comp_if(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    location(s, create(ast));
    // expect(s, Token::KeywordIf) old_test [comp_iter]
    return guard.commit();
}

bool testlist1(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    location(s, create(ast));
    if(!test(s, ast)) {
        return false;
    }
    if(is(s, TokenKind::Comma)) {
        AstExpressionsPtr exprs;
        create(exprs);
        exprs->line = ast->line;
        exprs->column = ast->column;
        ast = exprs;
        while(expect(s, TokenKind::Comma)) {
            AstExpr temp;
            if(!test(s, temp)) {
                return false;
            }
            exprs->items.push_back(temp);
        }
    }
    return guard.commit();
}

bool get_name(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstNamePtr name;
    location(s, create(name));
    ast = name;
    if(consume_value(s, Token::Identifier, name->id)) {
        return guard.commit();
    }
    return false;
}

bool dotted_name(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstAttributePtr attribute;
    location(s, create(attribute));
    ast = attribute;
    if(get_name(s, attribute->value)) {
        if(expect(s, TokenKind::Dot)) {
            return dotted_name(s, attribute->attribute)
                && guard.commit();
        }
        else {
            ast = attribute->value;
            return guard.commit();
        }
    }
    return false;
}

bool small_stmt(State & s, AstStmt & ast) {
    return print_stmt(s, ast)
        || expr_stmt(s, ast)
        || del_stmt(s, ast)
        || pass_stmt(s, ast)
        || flow_stmt(s, ast)
        || import_stmt(s, ast)
        || global_stmt(s, ast)
        || exec_stmt(s, ast)
        || assert_stmt(s, ast)
    ;
}

bool augassign(State & s, AstBinOpType & op) {
    if(expect(s, TokenKind::PlusEqual))
        op = AstBinOpType::Add;
    else if(expect(s, TokenKind::MinusEqual))
        op = AstBinOpType::Sub;
    else if(expect(s, TokenKind::StarEqual))
        op = AstBinOpType::Mult;
    else if(expect(s, TokenKind::SlashEqual))
        op = AstBinOpType::Div;
    else if(expect(s, TokenKind::PercentEqual))
        op = AstBinOpType::Mod;
    else if(expect(s, TokenKind::BinAndEqual))
        op = AstBinOpType::BitAnd;
    else if(expect(s, TokenKind::BinOrEqual))
        op = AstBinOpType::BitOr;
    else if(expect(s, TokenKind::CircumFlexEqual))
        op = AstBinOpType::BitXor;
    else if(expect(s, TokenKind::LeftShiftEqual))
        op = AstBinOpType::LeftShift;
    else if(expect(s, TokenKind::RightShiftEqual))
        op = AstBinOpType::RightShift;
    else if(expect(s, TokenKind::DoubleStarEqual))
        op = AstBinOpType::Power;
    else if(expect(s, TokenKind::DoubleSlashEqual))
        op = AstBinOpType::FloorDiv;
    else
        return false;
    return true;
}

bool import_from(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstImportFromPtr impfrom;
    location(s, create(impfrom));
    ast = impfrom;
    impfrom->level = 0;
    if(expect(s, Token::KeywordFrom)) {
        // (expect(s, TokenKind::Dot)* dotted_name || expect(s, TokenKind::Dot)+)
        if(is(s, TokenKind::Dot)) {
            while(expect(s, TokenKind::Dot)) ++impfrom->level;
        }
        if(!dotted_name(s, impfrom->module) && impfrom->level == 0) {
            syntax_error(s, "Expected name of module");
            return false;
        }
        //    expect(s, Token::KeywordImport)
        if(!expect(s, Token::KeywordImport)) {
            syntax_error(s, "Expected 'import'");
            return false;
        }
        // expect(s, TokenKind::Star)
        if(expect(s, TokenKind::Star)) {
            // ok
        }
        // || expect(s, TokenKind::LeftParen) import_as_names expect(s, TokenKind::RightParen)
        else if(expect(s, TokenKind::LeftParen)) {
            if(!import_as_names(s, impfrom->names)) {
                    return false;
            }
            if(!expect(s, TokenKind::RightParen)) {
                return false;
            }
            // ok
        }
        // || import_as_names))
        else if(import_as_names(s, impfrom->names)) {
            // ok
        }
        else {
            return false;
        }
        return guard.commit();
    }
    return false;
}

bool import_as_names(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstExpressionsPtr exprs;
    location(s, create(exprs));
    ast = exprs;
    // import_as_name (expect(s, TokenKind::Comma) import_as_name)* [expect(s, TokenKind::Comma)]
    AstExpr alias;
    while(import_as_name(s, alias)) {
        exprs->items.push_back(alias);
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    return !exprs->items.empty();
}

bool return_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstReturnPtr ret;
    location(s, create(ret));
    ast = ret;
    // expect(s, Token::KeywordReturn) [testlist]
    if(!expect(s, Token::KeywordReturn))
    {
        return false;
    }
    testlist(s, ret->value);
    return guard.commit();
}

bool testlist_safe(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstExpressionsPtr exprs;
    location(s, create(exprs));
    ast = exprs;
    AstExpr temp;
    // old_test [(expect(s, TokenKind::Comma) old_test)+ [expect(s, TokenKind::Comma)]]
    while(old_test(s, temp)) {
        exprs->items.push_back(temp);
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    return !exprs->items.empty() && guard.commit();
}

bool not_test(State & s, AstExpr & ast) {
    StateGuard guard(s);
    // expect(s, Token::KeywordNot) not_test || comparison
    if(expect(s, Token::KeywordNot)) {
        if(!not_test(s, ast)) {
            return false;
        }
    }
    else if(!comparison(s, ast)) {
        return false;
    }
    return guard.commit();
}

bool testlist_comp(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstExpressionsPtr exprs;
    location(s, create(exprs));
    ast = exprs;
    AstExpr tmp;
    // test ( comp_for || (expect(s, TokenKind::Comma) test)* [expect(s, TokenKind::Comma)] )
    if(!test(s, tmp)) {
        return false;
    }
    if(is(s, Token::KeywordFor)) {
        AstGeneratorPtr generator;
        location(s, create(generator));
        ast = generator;
        generator->expression = tmp;
        if(!comp_for(s, generator->for_expr)) {
            return false;
        }
    }
    else {
        exprs->items.push_back(tmp);
        for(;;) {
            if(!expect(s, TokenKind::Comma)) {
                break;
            }
            if(!test(s, tmp)) {
                break;
            }
            exprs->items.push_back(tmp);
        }
    }
    return guard.commit();
}

bool except_clause(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstExceptPtr except;
    location(s, create(except));
    ast = except;
    // expect(s, Token::KeywordExcept) [test [(expect(s, Token::KeywordAs) || expect(s, TokenKind::Comma)) test]]
    if(!expect(s, Token::KeywordExcept)) {
        return false;
    }

    if(test(s, except->type)) {
        if(expect(s, Token::KeywordAs) || expect(s, TokenKind::Comma)) {
            if(!test(s, except->name)) {
                return false;
            }
        }
    }

    return guard.commit();
}

bool listmaker(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);    
    AstListPtr ptr;
    location(s, create(ptr));
    // test ( list_for || (expect(s, TokenKind::Comma) test)* [expect(s, TokenKind::Comma)] )
    if(test(s, ast)) {
        if(is(s, Token::KeywordFor)) {
            AstListCompPtr comp;
            location(s, create(comp));
            comp->element = ast;
            ast = comp;
            if(!list_for(s, comp->generators)) {
                return false;
            }
        }
        else {
            ptr->elements.push_back(ast);
            ast = ptr;
            while(expect(s, TokenKind::Comma)) {
                AstExpr tmp;
                if(!test(s, tmp)) {
                    break;
                }
                ptr->elements.push_back(tmp);
            }
        }
    }
    // else empty list => OK
    return guard.commit();
}

bool old_test(State & s, AstExpr & ast) {
    // or_test || old_lambdef
    return or_test(s, ast)
        || old_lambdef(s, ast);
}

bool import_name(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstExpressionStatementPtr expr;
    location(s, create(expr));
    ast = expr;
    // expect(s, Token::KeywordImport) dotted_as_names
    if(!expect(s, Token::KeywordImport)) {
        return false;
    }
    return dotted_as_names(s, expr->expr) && guard.commit();
}

bool break_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstBreakPtr brk;
    location(s, create(brk));
    ast = brk;
    if(!expect(s, Token::KeywordBreak)) {
        return false;
    }
    return guard.commit();
}

bool with_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstWithPtr with;
    location(s, create(with));
    ast = with;
    // expect(s, Token::KeywordWith) with_item (expect(s, TokenKind::Comma) with_item)*  expect(s, TokenKind::Colon) suite    
    if(!expect(s, Token::KeywordWith)) {
        return false;
    }
    AstWithItemPtr item;
    while(with_item(s, item)) {
        with->items.push_back(item);
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    if(!expect(s, TokenKind::Colon)) {
        return false;
    }
    if(!suite(s, with->body)) {
        return false;
    }
    return guard.commit();
}

bool comp_op(State & s, AstCompareOpType & op) {
    StateGuard guard(s);
    if(expect(s, TokenKind::Less)) {
        op = AstCompareOpType::Less;
    }
    else if(expect(s, TokenKind::Greater)) {
        op = AstCompareOpType::More;
    }
    else if(expect(s, TokenKind::EqualEqual)) {
        op = AstCompareOpType::Equals;
    }
    else if(expect(s, TokenKind::GreaterEqual)) {
        op = AstCompareOpType::MoreEqual;
    }
    else if(expect(s, TokenKind::LessEqual)) {
        op = AstCompareOpType::LessEqual;
    }
    else if(expect(s, TokenKind::NotEqual)) {
        op = AstCompareOpType::NotEqual;
    }
    else if(expect(s, Token::KeywordIn)) {
        op = AstCompareOpType::In;
    }
    else if(expect(s, Token::KeywordNot) && expect(s, Token::KeywordIn)) {
        op = AstCompareOpType::NotIn;
    }
    else if(expect(s, Token::KeywordIs)) {
        op = AstCompareOpType::Is;
        if(expect(s, Token::KeywordNot)) {
           op = AstCompareOpType::IsNot;
        }
    }
    else {
        return false;
    }
    return guard.commit();
}

bool raise_stmt(State & s, AstStmt & ast) {
    // expect(s, Token::KeywordRaise) [test [expect(s, TokenKind::Comma) test [expect(s, TokenKind::Comma) test]]]
    if(!expect(s, Token::KeywordRaise)) {
        return false;
    }
    StateGuard guard(s, ast);
    AstRaisePtr raise;
    location(s, create(raise));
    ast = raise;

    if(test(s, raise->arg0)) {
        if(expect(s, TokenKind::Comma)) {
            if(!test(s, raise->arg1)) {
                return false;
            }
            if(expect(s, TokenKind::Comma)) {
                if(!test(s, raise->arg2)) {
                    return false;
                }
            }
        }
    }

    return guard.commit();
}

bool atom(State & s, AstExpr & ast) {
    StateGuard guard(s);
    // expect(s, TokenKind::LeftParen) [yield_expr||testlist_comp] expect(s, TokenKind::RightParen)
    if(expect(s, TokenKind::LeftParen)) {
        // Either or, both optional
        if(testlist_comp(s, ast)) {
            if(ast->type != AstType::Generator) {
                AstTuplePtr ptr;
                location(s, create(ptr));
                if(ast->type == AstType::Expressions) {
                    AstExpressions & e = *static_cast<AstExpressions*>(ast.get());
                    for(auto item : e.items) {
                        ptr->elements.push_back(item);
                    }
                }
                else {
                    ptr->elements.push_back(ast);
                }
                ast = ptr;
            }
        }
        else if(!yield_expr(s, ast)) {
            AstTuplePtr ptr;
            location(s, create(ptr));
            ast = ptr;
        }
        if(!expect(s, TokenKind::RightParen)) {
            return false;
        }
    }
    // ||expect(s, TokenKind::LeftBracket) [listmaker] expect(s, TokenKind::RightBracket)
    else if(expect(s, TokenKind::LeftBracket)) {
        if(!listmaker(s, ast)) {
            AstListPtr ptr;
            location(s, create(ptr));
            ast = ptr;
        }
        if(!expect(s, TokenKind::RightBracket)) {
            return false;
        }
    }
    // ||expect(s, TokenKind::LeftBrace) [dictorsetmaker] expect(s, TokenKind::RightBrace)
    else if(expect(s, TokenKind::LeftBrace)) {
        if(!dictorsetmaker(s, ast)) {
            AstDictPtr ptr;
            location(s, create(ptr));
            ast = ptr;
        }
        if(!expect(s, TokenKind::RightBrace)) {
            return false;
        }
    }
    // ||expect(s, TokenKind::BackQuote) testlist1 expect(s, TokenKind::BackQuote)
    else if(expect(s, TokenKind::BackQuote)) {
        AstReprPtr ptr;
        location(s, create(ptr));
        ast = ptr;
        if(!testlist(s, ptr->value)) {
            return false;
        }
        if(!expect(s, TokenKind::BackQuote)) {
            return false;
        }
    }
    // ||expect(s, Token::Identifier)
    else if(get_name(s, ast)) {
        // OK
    }
    // || NUMBER
    else if(is(s, TokenKind::Number)) {
        AstNumberPtr ptr;
        if(!number(s, ptr)) {
            return false;
        }
        ast = ptr;
    }
    // || STRING+
    else if(is(s, Token::String)) {
        AstExpressionsPtr ptr;
        location(s, create(ptr));
        ast = ptr;
        while(is(s, Token::String)) {
            AstStrPtr str;
            location(s, create(str));
            str->value = top(s).value;
            ptr->items.push_back(str);
            expect(s, Token::String);
        }
    }
    else {
        return false;
    }
    return guard.commit();
}

bool parameters(State & s, AstArguments & ast) {
    StateGuard guard(s);
    location(s, ast);
    // expect(s, TokenKind::LeftParen) [varargslist] expect(s, TokenKind::RightParen)
    if(!expect(s, TokenKind::LeftParen)) {
        return false;
    }
    varargslist(s, ast);
    if(!expect(s, TokenKind::RightParen)) {
        return false;
    }
    return guard.commit();
}

bool dotted_as_name(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstAliasPtr alias;
    location(s, create(alias));
    ast = alias;
    // dotted_name [expect(s, Token::KeywordAs) expect(s, Token::Identifier)]    
    return guard.commit();
}

bool arglist(State & s, AstArguments & ast) {
    StateGuard guard(s);
    // location(s, create(ast));
    // (argument expect(s, TokenKind::Comma))* (argument [expect(s, TokenKind::Comma)]||expect(s, TokenKind::Star) test (expect(s, TokenKind::Comma) argument)* [expect(s, TokenKind::Comma) expect(s, TokenKind::DoubleStar) test]||expect(s, TokenKind::DoubleStar) test)
    AstExpr item;
    while(!(is(s, TokenKind::Star) || is(s, TokenKind::DoubleStar)) && argument(s, item)) {
        ast.arguments.push_back(item);
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    expect(s, TokenKind::Comma);
    while(expect(s, TokenKind::Star)) {
        if(!test(s, item)) {
            return false;
        }
        ast.args.push_back(item);
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    while(!is(s, TokenKind::DoubleStar) && argument(s, item)) {
        if(item->type != AstType::Keyword) {
            return false;
        }
        ast.keywords.push_back(item);
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    expect(s, TokenKind::Comma);
    if(expect(s, TokenKind::DoubleStar)) {
        if(!test(s, ast.kwargs)) {
            return false;
        }
    }
    return guard.commit();
}

bool single_input(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    location(s, create(ast));
    // expect(s, Token::NewLine) || simple_stmt || compound_stmt expect(s, Token::NewLine)
    return guard.commit();
}

bool shift_expr(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstBinOpPtr bin;
    location(s, create(bin));
    ast = bin;
    // arith_expr ((expect(s, TokenKind::LeftShift)||expect(s, TokenKind::RightShift)) arith_expr)*
    if(!arith_expr(s, bin->left)) {
        return false;
    }
    if(!(expect(s, TokenKind::LeftShift) || expect(s, TokenKind::RightShift))) {
        ast = bin->left;
    }
    else if(!arith_expr(s, bin->right)){
        return false;
    }
    return guard.commit();
}

bool exprlist(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstExpressionsPtr exprs;
    location(s, create(exprs));
    ast = exprs;
    // expr (expect(s, TokenKind::Comma) expr)* [expect(s, TokenKind::Comma)]
    AstExpr tmp;
    while(expr(s, tmp)) {
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    return !exprs->items.empty() && guard.commit();
}

bool comp_for(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstComprPtr compr;
    location(s, create(compr));
    ast = compr;
    // expect(s, Token::KeywordFor) exprlist expect(s, Token::KeywordIn) or_test [comp_iter]
    if(!expect(s, Token::KeywordFor)) {
        return false;
    }
    if(!exprlist(s, compr->target)) {
        return false;
    }
    if(!expect(s, Token::KeywordIn)) {
        return false;
    }
    AstExpressionsPtr exprs;
    location(s, create(exprs));
    AstExpr tmp;
    if(!or_test(s, tmp)) {
        return false;
    }
    exprs->items.push_back(tmp);
    if(comp_iter(s, tmp)) {
        exprs->items.push_back(tmp);
    }
    return guard.commit();
}

bool simple_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstSuitePtr suite_;
    location(s, create(suite_));
    // small_stmt (expect(s, TokenKind::SemiColon) small_stmt)* [expect(s, TokenKind::SemiColon)] expect(s, Token::NewLine)
    AstStmt tmp;
    if(!small_stmt(s, tmp)) {
        return false;
    }
    suite_->items.push_back(tmp);
    if(expect(s, TokenKind::SemiColon)) {
        while(small_stmt(s, tmp)) {
            if(!expect(s, TokenKind::SemiColon)) {
                break;
            }
        }
    }
    if(suite_->items.size() == 1) {
        ast = tmp;
    }
    if(!expect(s, TokenKind::NewLine)) {
        return false;
    }
    while(expect(s, TokenKind::NewLine));
    return guard.commit();
}

bool list_iter(State & s, AstExpr & ast) {
    return list_for(s, ast)
        || list_if(s, ast);
}

bool exec_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstExecPtr exec;
    location(s, create(exec));
    // expect(s, Token::KeywordExec) expr [expect(s, Token::KeywordIn) test [expect(s, TokenKind::Comma) test]]       
    if(!expect(s, Token::KeywordExec)) {
        return false;
    }
    if(!test(s, exec->body)) {
        return false;
    }
    if(expect(s, Token::KeywordIn)) {
        if(!test(s, exec->globals)) {
            return false;
        }
        if(expect(s, TokenKind::Comma)) {
            if(!test(s, exec->locals)) {
                return false;
            }
        }
    }
    return guard.commit();
}

bool factor(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    // (expect(s, TokenKind::Plus)||expect(s, TokenKind::Minus)||expect(s, TokenKind::Tilde)) factor || power
    if(is(s, TokenKind::Plus)||is(s, TokenKind::Minus)||is(s, TokenKind::Tilde)) {
        // AstUnaryOpType::
        AstUnaryOpPtr unary;
        location(s, create(unary));
        ast = unary;
        if(expect(s, TokenKind::Plus)) {
            unary->op = AstUnaryOpType::Add;
        }
        else if(expect(s, TokenKind::Minus)) {
            unary->op = AstUnaryOpType::Sub;
        }
        else if(expect(s, TokenKind::Tilde)) {
            unary->op = AstUnaryOpType::Invert;
        }
        return factor(s, unary->operand) && guard.commit();
    }
    return power(s, ast) && guard.commit();
}

bool test(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    // or_test [expect(s, Token::KeywordIf) or_test expect(s, Token::KeywordElse) test] || lambdef
    if(or_test(s, ast)) {
        if(expect(s, Token::KeywordIf)) {
            AstIfExprPtr ifexpr;
            location(s, create(ifexpr));
            ifexpr->body = ast;
            ast = ifexpr;
            if(!or_test(s, ifexpr->test)) {
                return false;
            }
            if(!expect(s, Token::KeywordElse)) {
                return false;
            }
            if(!test(s, ifexpr->orelse)) {
                return false;
            }
        }
    }
    else if(!lambdef(s, ast)){
        return false;
    }
    return guard.commit();
}

bool global_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstGlobalPtr ptr;
    location(s, create(ptr));
    ast = ptr;
    // expect(s, Token::KeywordGlobal) expect(s, Token::Identifier) (expect(s, TokenKind::Comma) expect(s, Token::Identifier))*
    if(expect(s, Token::KeywordGlobal)) {
        AstExpr item;
        if(!get_name(s, item)) {
            return false;
        }
        assert(ptr->type == AstType::Name);
        if(ptr->type != AstType::Name) {
            return false;
        }
        ptr->names.push_back(std::static_pointer_cast<AstName>(item));
        while(expect(s, TokenKind::Comma)) {
            if(!get_name(s, item)) {
                return false;
            }
            assert(ptr->type == AstType::Name);
            if(ptr->type != AstType::Name) {
                return false;
            }
            ptr->names.push_back(std::static_pointer_cast<AstName>(item));
        }
        return guard.commit();
    }
    return false;
}
